<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/card_side_margin"
        android:paddingTop="@dimen/header_margin"
        android:paddingEnd="@dimen/card_side_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/list_item_image"
        tools:spanCount="3" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="38dp"
        android:indeterminate="true"
        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:trackThickness="6dp">


    </com.google.android.material.progressindicator.CircularProgressIndicator>

    <ImageView
        android:id="@+id/noDataImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_description_image"
        app:layout_constraintBottom_toTopOf="@+id/noDataTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/apprentice_profile" />

    <TextView
        android:id="@+id/noDataTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:textSize="16sp"
        android:text="@string/no_data_text_name"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/noDataTextTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noDataImage" />

    <TextView
        android:id="@+id/noDataTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_text_title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/noDataTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noDataTextName" />

    <TextView
        android:id="@+id/noDataTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:autoLink="all"
        android:text="@string/no_data_text_phone"
        app:layout_constraintBottom_toTopOf="@+id/noDataTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noDataTextTitle" />

    <TextView
        android:id="@+id/noDataTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:autoLink="all"
        android:text="@string/no_data_text_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noDataTextPhone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/noDataGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="noDataImage,noDataTextName,noDataTextPhone,noDataTextTitle,noDataTextEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>